--- a/meson.build
+++ b/meson.build
@@ -1,6 +1,6 @@
 project(
-    'boxmodel'.
-    'c', 'cpp', 'cython',
+    'boxmodel',
+    'c', 'cpp',
     version: '0.0.1',
     default_options: [
         'buildtype=debugoptimized',
@@ -13,13 +13,9 @@ cc = meson.get_compiler('c')
 cpp = meson.get_compiler('cpp')
 
 if cc.get_id() == 'gcc'
-    if not cc.version().version_compare('>=8.0')
-        error('boxmodel requires GCC >=8.0')
-    endif
-elif cc.get_id() == 'msvc'
-    if not cc.version().version_compare('>=19.20')
-        error('boxmodel requires at least vc142')
-    endif
+  if not cc.version().version_compare('>=8.0')
+    error('SciPy requires GCC >= 8.0')
+  endif
 endif
 
 py_mod = import('python')
